Resolve issue caused by text vertical flex positioning and cut off by the container

--- a/src/Slide/Slide.module.css
+++ b/src/Slide/Slide.module.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   user-select: auto;
   box-sizing: border-box;
 }
